--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,3 +13,14 @@
 *     width: 20px;
 *   `;
 */
+
+.ant-layout-header {
+  padding: unset !important;
+  background: white !important;
+
+  box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.15);
+}
+
+.ant-card {
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 2px 0px;
+}
